fix(ui-mode): Watch mode button doesn't show active when test selected description: The watch mode button was not showing as highlighted when a test in the tree view was focused and the watch icon was being clicked. Handled this issue for both, light moide and dark mode visibility

--- a/packages/web/src/components/treeView.css
+++ b/packages/web/src/components/treeView.css
@@ -69,6 +69,10 @@
   color: var(--vscode-list-activeSelectionForeground) !important;
 }
 
+.tree-view-content:focus .tree-view-entry.selected button.eye.toggled .codicon {
+  color: var(--vscode-editorInfo-foreground) !important;
+}
+
 .tree-view-empty {
   flex: auto;
   display: flex;
